adding flask files

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "import os\n",
     "import requests\n",
     "import pandas as pd\n",
+    "import time\n",
+    "import numpy as np \n",
     "# import pymongo\n"
    ]
   },
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------\n",
-      "NASA's MAVEN Maps Winds in the Martian Upper Atmosphere that Mirror the Terrain Below and Gives Clues to Martian Climate\n",
-      "Researchers have created the first map of wind circulation in the upper atmosphere of a planet besides Earth, using data from NASA’s MAVEN spacecraft that were collected during the last two years.\n",
-      "Scraping Complete\n"
+      "The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover\n",
+      "Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.\n"
      ]
     }
    ],
@@ -78,9 +78,9 @@
     "# HTML object\n",
     "html = browser.html\n",
     "# Parse HTML with Beautiful Soup\n",
-    "soup = bs(html, 'html.parser')\n",
+    "news_soup = bs(html, 'html.parser')\n",
     "# Retrieve all elements that contain book information\n",
-    "articles = soup.find_all('div', class_='list_text')\n",
+    "articles = news_soup.find_all('div', class_='list_text')\n",
     "#     print(articles)\n",
     "#     Iterate through each book\n",
     "#     for article in articles:\n",
@@ -89,8 +89,9 @@
     "news_title = article.find('a').contents[0]\n",
     "news_p = article.find_all('div', class_='article_teaser_body')[0].contents[0]\n",
     "\n",
-    "print(title) \n",
-    "print(teaser)"
+    "print(news_title) \n",
+    "print(news_p)\n",
+    "browser.quit()"
    ]
   },
   {
@@ -102,39 +103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
     "browser.visit(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------\n",
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA23932-640x350.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA23937-640x350.jpg\n"
      ]
     }
    ],
    "source": [
     "html = browser.html\n",
     "# Parse HTML with Beautiful Soup\n",
-    "soup = bs(html, 'html.parser')\n",
+    "image_soup = bs(html, 'html.parser')\n",
     "# Retrieve all elements that contain book information\n",
-    "image = soup.find('div', class_='image_and_description_container')\n",
+    "image = image_soup.find('div', class_='image_and_description_container')\n",
     "\n",
     "# Use Beautiful Soup's find() method to navigate and retrieve attributes\n",
     "featured_image_url  = 'https://www.jpl.nasa.gov' + image.find_all('div',class_='img')[0].contents[1]['src']\n",
     "\n",
-    "print(featured_image_url) \n"
+    "print(featured_image_url) \n",
+    "browser.quit()"
    ]
   },
   {
@@ -146,49 +148,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
     "url = 'https://twitter.com/marswxreport?lang=en'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "time.sleep(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'descendants'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-335ede9b7ed3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://twitter.com/marswxreport?lang=en'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'html.parser'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mall_tweets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'css-901oao'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mtweet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_tweets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/bs4/element.py\u001b[0m in \u001b[0;36mfind_all\u001b[0;34m(self, name, attrs, recursive, text, limit, **kwargs)\u001b[0m\n\u001b[1;32m   1274\u001b[0m         same is true of the tag name.\"\"\"\n\u001b[1;32m   1275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1276\u001b[0;31m         \u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescendants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1277\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mrecursive\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1278\u001b[0m             \u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'descendants'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InSight sol 542 (2020-06-05) low -92.2ºC (-134.0ºF) high 0.0ºC (32.0ºF)\n",
+      "winds from the SW at 5.2 m/s (11.6 mph) gusting to 18.3 m/s (41.0 mph)\n",
+      "pressure at 7.30 hPa\n"
      ]
     }
    ],
    "source": [
     "html = browser.html\n",
     "# Parse HTML with Beautiful Soup\n",
-    "res = requests.get('https://twitter.com/marswxreport?lang=en')\n",
-    "soup = bs(res.content, 'html.parser')\n",
-    "# all_tweets = bs.find_all('div',class_='css-901oao')\n",
+    "# res = requests.get('https://twitter.com/marswxreport?lang=en')\n",
+    "weather_soup = bs(html, 'html.parser')\n",
+    "# print(soup.prettify())\n",
+    "# .find('div', attrs={\"class\": \"tweet\", \"data-name\": \"Mars Weather\"})\n",
+    "all_tweets = weather_soup.find_all('div', attrs={\"lang\": \"en\"})\n",
     "tweet = all_tweets[0]\n",
+    "mars_weather = tweet.text\n",
     "\n",
-    "# tweet = soup.find_all('div', class_=\"css-901oao r-jwli3a r-1qd0xha r-a023e6 r-16dba41 r-ad9z0x r-bcqeeo r-bnwqim r-qvutc0\")\n",
-    "# tweet = soup.find_all(\"li\", attrs={\"class\":\"js-stream-item\"})\n",
-    "\n",
-    "\n",
-    "print(tweet)\n",
-    "# Use Beautiful Soup's find() method to navigate and retrieve attributes\n",
-    "# mars_weather  = tweet.find('span')\n",
-    "\n",
-    "# print(mars_weather) "
+    "print(mars_weather)\n",
+    "browser.quit()"
    ]
   },
   {
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +232,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,28 +245,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Measurement</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Description</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 (Phobos &amp; Deimos)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Equatorial Diameter:</th>\\n      <th>Polar Diameter:</th>\\n      <th>Mass:</th>\\n      <th>Moons:</th>\\n      <th>Orbit Distance:</th>\\n      <th>Orbit Period:</th>\\n      <th>Surface Temperature:</th>\\n      <th>First Record:</th>\\n      <th>Recorded By:</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>6,792 km</td>\\n      <td>6,752 km</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n      <td>687 days (1.9 years)</td>\\n      <td>-87 to -5 °C</td>\\n      <td>2nd millennium BC</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "                                        Measurement\n",
+       "Description                                        \n",
+       "Equatorial Diameter:                       6,792 km\n",
+       "Polar Diameter:                            6,752 km\n",
+       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
+       "Moons:                          2 (Phobos & Deimos)\n",
+       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
+       "Orbit Period:                  687 days (1.9 years)\n",
+       "Surface Temperature:                   -87 to -5 °C\n",
+       "First Record:                     2nd millennium BC\n",
+       "Recorded By:                   Egyptian astronomers"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np \n",
-    "df = tables[0]\n",
-    "cols = df[0].tolist()\n",
-    "row = df[1].tolist()\n",
-    "mars_df = pd.DataFrame(np.array([row]), columns=cols)\n",
+    "mars_df = tables[0]\n",
+    "mars_df = mars_df.rename(columns={0:'Description',1:'Measurement'})\n",
+    "mars_df.set_index('Description',inplace=True)\n",
     "mars_html_table = mars_df.to_html()\n",
-    "mars_html_table"
+    "mars_df"
    ]
   },
   {
@@ -311,9 +383,9 @@
     "# HTML object\n",
     "html = browser.html\n",
     "# Parse HTML with Beautiful Soup\n",
-    "soup = bs(html, 'html.parser')\n",
+    "hemi_soup = bs(html, 'html.parser')\n",
     "# Retrieve all elements that contain book information\n",
-    "hemispheres = soup.find_all('div', class_='item')\n",
+    "hemispheres = hemi_soup.find_all('div', class_='item')\n",
     "\n",
     "# Iterate through each book\n",
     "for hemisphere in hemispheres:\n",
@@ -342,7 +414,7 @@
     "    i += 1\n",
     "    \n",
     "print(hemisphere_image_urls)   \n",
-    "    "
+    "browser.quit()"
    ]
   },
   {
